style update board mobile

--- a/src/client/containers/Tetris.css
+++ b/src/client/containers/Tetris.css
@@ -201,6 +201,7 @@ input::placeholder {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	max-width: 1200px;
 	width: 95%;
 }
@@ -217,6 +218,7 @@ input::placeholder {
 .player-list-container {
 	display: flex;
 	flex-direction: column;
+	margin-bottom: 40px;
 	width: 100%;
 }
 .room-list-title,
@@ -226,7 +228,7 @@ input::placeholder {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 30px;
 	letter-spacing: 1px;
-	margin: 20px 0px;
+	margin: 0 0px 20px;
 	width: max-content;
 }
 .list-item {
@@ -262,7 +264,6 @@ div .list-item:last-of-type {
 	color: #EFF1F3;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
-	margin-top: 20px;
 	padding: 15px 0;
 	text-align: center;
 	width: 100%;
@@ -316,11 +317,9 @@ div .list-item:last-of-type {
 	align-items: center;
 	display: flex;
 	font-weight: 500;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	letter-spacing: 1px;
-}
-.room-list-title {
-	margin-top: 0;
 }
 
 /* Player List
@@ -410,10 +409,10 @@ div .list-item:last-of-type {
    ========================================================================== */
 
 .stats-container {
+	align-items: flex-end;
 	display: flex;
 	flex-direction: column;
-	align-items: flex-end;
-	height: 600px;
+	padding: 0 10px;
 	width: 310px;
 }
 .score-container {
@@ -518,12 +517,13 @@ div .list-item:last-of-type {
 		width: 90%;
 	}
 }
-@media (max-width: 729.98px) {
-	.stats-container {
-		display: none;
-	}
+@media (max-width: 745px) {
 	.board-stats-container {
+		flex-wrap: wrap;
 		justify-content: center;
+	}
+	.stats-container {
+		margin-top: 20px;
 	}
 }
 
@@ -531,12 +531,6 @@ div .list-item:last-of-type {
    ========================================================================== */
 
 @media (max-width: 575px) {
-	#root {
-		padding: 10px 0;
-	}
-	.room-item {
-		flex-direction: column;
-	}
 	.room-item-info-container {
 		margin-bottom: 10px;
 	}
@@ -548,7 +542,7 @@ div .list-item:last-of-type {
 		width: 95%;
 	}
 }
-@media (max-width: 435px) {
+@media (max-width: 435px) and (max-height: 768px) {
 	.username-input-container {
 		max-width: 95%;
 		justify-content: space-between;
@@ -558,6 +552,16 @@ div .list-item:last-of-type {
 	}
 	.three-dots-container {
 		display: none;
+	}
+	.board-stats-container {
+		padding: 0 0 30px;
+	}
+	.username-input-container,
+	.room-selection-wrapper,
+	.game-container {
+		border-radius: 0;
+		min-width: 100vw;
+		min-height: 100vh;
 	}
 }
 
