--- a/src/client/styles/Tetris.css
+++ b/src/client/styles/Tetris.css
@@ -446,7 +446,7 @@ div .list-item:last-of-type {
 }
 .game-end-screen {
 	align-items: center;
-	background-color: #454545;
+	background-color:rgba(0,0,0,0.6);
 	color: #eb4d4b;
 	display: flex;
 	flex-direction: column;
@@ -464,10 +464,11 @@ div .list-item:last-of-type {
 }
 .game-end-title {
 	margin: 0;
+	font-size: 90px;
 }
 .game-end-message {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 22px;
+	font-size: 30px;
 	font-weight: 500;
 }
 
@@ -476,14 +477,13 @@ div .list-item:last-of-type {
    ========================================================================== */
 
 .stats-container {
-	align-items: flex-end;
 	display: flex;
 	flex-direction: column;
 	padding: 0 10px;
 	width: 310px;
 }
 .score-container {
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	width: 100%;
 }
 .player-base-info {
@@ -540,6 +540,11 @@ div .list-item:last-of-type {
 	flex-wrap: wrap;
 	overflow: auto;
 }
+.spectrum-wrapper {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .spectrum-container {
 	background-color: white;
 	flex-wrap: wrap;
@@ -554,6 +559,12 @@ div .list-item:last-of-type {
 	border: none;
 	height: 6px;
 	width: 6px;
+}
+.spectrum-player-name {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 15px;
+	color: #eb4d4b;
+	font-weight: 600;
 }
 .spectrums-container::-webkit-scrollbar-track {
 	background-color: #454545;
@@ -641,7 +652,7 @@ div .list-item:last-of-type {
 /* Larger Screen
    ========================================================================== */
 
-@media (min-width: 890px) and (min-height: 935px) {
+@media (min-width: 915px) and (min-height: 935px) {
 	.block {
 		border-width: 3px;
 		height: 34px;
