--- a/src/client/styles/Tetris.css
+++ b/src/client/styles/Tetris.css
@@ -580,11 +580,13 @@ div > .list-item:last-of-type {
 .spectrums-container {
 	display: flex;
 	flex-wrap: wrap;
+	margin-bottom: 10px;
 	overflow: auto;
 }
 .spectrum-wrapper {
+	border-radius: 4px;
 	display: flex;
-    flex-direction: column;
+	flex-direction: column;
     align-items: center;
 }
 .spectrum-container {
